# Hackathon-2-todo

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/constitution/: 2026-01-02-constitution-master-update.md
history/prompts/in-memory-todo/: 2026-01-02-in-memory-todo-plan.md  2026-01-02-in-memory-todo-spec.md  2026-01-02-in-memory-todo-tasks.md
specs/001-in-memory-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-in-memory-todo/checklists/: requirements.md
specs/001-in-memory-todo/contracts/: service_interface.md
src/: main.py
src/todo/: cli.py
src/todo/domain/: task.py
src/todo/lib/: logging.py
src/todo/services/: todo_service.py
tests/integration/: test_cli_flows.py
tests/unit/: test_todo_service.py
